Bug 3014. Correct TeX generated for tabular table. Note that it does’t set the table width, but it does set a maximum width. You might not see the width set until you insert enough text to force the lines to wrap. I changed the table revision dialog to say “Max table width”.

--- a/prince/base/locale/en-us/dialogs/EdInsertTable.dtd
+++ b/prince/base/locale/en-us/dialogs/EdInsertTable.dtd
@@ -28,7 +28,7 @@
 <!ENTITY numRowsEditField.accesskey "R">
 <!ENTITY numColumnsEditField.label "Columns">
 <!ENTITY numColumnsEditField.accesskey "C">
-<!ENTITY widthEditField.label "Table width">
+<!ENTITY widthEditField.label "Max table width">
 <!ENTITY widthEditField.accesskey "W">
 <!ENTITY autoWidth.label "Automatic, or">
 <!ENTITY autoWidth.accesskey "A">
