Change msibreak to msibr.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -41,8 +41,8 @@
 \MSIEmptyElement[leftquote]{textquotedblleft}
 \MSIEmptyElement[rightquote]{textquotedblright}
 \MSIEmptyElement{textbackslash}
-\MSIEmptyElement[msibreak type="discretionaryHyphen" invisDisplay="-"]{-}
-\MSIEmptyElement[msibreak type="noBreak" invisDisplay="~"]{nolinebreak}
+\MSIEmptyElement[msibr type="discretionaryHyphen" invisDisplay="-"]{-}
+\MSIEmptyElement[msibr type="noBreak" invisDisplay="~"]{nolinebreak}
 \MSIEmptyElement[asterisk]{*}
 \MSIEmptyElement[hspace type="emSpace"]{quad}
 \MSIEmptyElement[hspace type="twoEmSpace"]{qquad}
@@ -58,7 +58,7 @@
 
 \MSIEmptyElement{qedhere}
 
-\MSIEmptyElement[msibreak type="allowBreak" invisDisplay="|"]{allowbreak}
+\MSIEmptyElement[msibr type="allowBreak" invisDisplay="|"]{allowbreak}
 
 
 \MSIEmptyElement{nobreakspace}
