Complete fix of 3051

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1711,7 +1711,7 @@
 %% Various note type things
 
 \def\@start@notewrapper{%
-    \msiopentag{notewrapper}{<notewrapper xmlns="http://www.w3.org/1999/xhtml">}}
+    \msiopentag{notewrapper}{<notewrapper xmlns="http://www.w3.org/1999/xhtml" type='footnote'>}}
 
 \def\@end@notewrapper{%
     \msiclosetag{notewrapper}{</notewrapper>}}
