--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -277,7 +277,7 @@
    \def\and{\msiclosetag{address}{</address>}%
             \msiclosetag{author}{</author>}\msitag{^^0a}\msiopentag{author}{<author>}}%
    \msitag{^^0a}%
-   \msiopentag{author}{<author>}#1\msiclosetag{author}{</author>}%
+   \msiopentag{author}{<author>}#1\msiclosetag{address}{</address>}\msiclosetag{author}{</author>}%
   \endgroup
 }
 
@@ -511,7 +511,7 @@
 
 \def\out@bibitemA[#1]#2{%
    \if@first@item
-     \@first@itemfalse
+     \global\@first@itemfalse
    \else
      \msiclosetag{bodyText}{</bodyText>}%
      \msiclosetag{bibitem}{</bibitem>}%
@@ -524,7 +524,7 @@
 
 \def\out@bibitemB#1{%
    \if@first@item
-     \@first@itemfalse
+     \global\@first@itemfalse
    \else
      \msiclosetag{bodyText}{</bodyText>}%
      \msiclosetag{bibitem}{</bibitem>}%
