--- a/filters/ptprince/ptdata/msi-tcilatex.tex
+++ b/filters/ptprince/ptdata/msi-tcilatex.tex
@@ -470,9 +470,9 @@
 \def\TeXButton#1#2{%
    \ifmmode
      %\string\TeXButton{#1}{#2}%
-     \msitag{\msipassthru{<texb enc="1" name="#1"><![CDATA[#2]]></texb>}}
+     \msitag{\msipassthru{<texb xmlns="http://www.w3.org/1999/xhtml" enc="1" name="#1"><![CDATA[#2]]></texb>}}
    \else
-     \msihmode\msitag{<texb enc="1" name="}\@wrap{#1}\msitag{"><![CDATA[#2]]></texb>}%
+     \msihmode\msitag{<texb xmlns="http://www.w3.org/1999/xhtml" enc="1" name="}\@wrap{#1}\msitag{"><![CDATA[#2]]></texb>}%
    \fi}
 
 
