Fix 3067. Still not what P. Viton wants I'm sure.

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -229,6 +229,14 @@
 \def\out@usepackageB#1{%
    \msi@br\msitag{<usepackage req="#1"/>}}
 
+%% \RequirePackage
+\def\out@reqpackageA[#1]#2{%
+   \msi@br\msitag{<usepackage requirepackage="true" req="#2" options="#1"/>}}
+
+\def\out@reqpackageB#1{%
+   \msi@br\msitag{<usepackage requirepackage="true"  req="#1"/>}}
+
+
 
 %% Frontmatter
 
