--- a/prince/base/locale/en-us/compute.properties
+++ b/prince/base/locale/en-us/compute.properties
@@ -148,7 +148,7 @@ FFGaussElim.fmt= Fraction Free Gaussian Elimination: %result%
 GaussElim.fmt= Gaussian Elimination: %result%
 Hermite.fmt= Hermite Normal Form: %result%
 HermitianTr.fmt= Hermitian Transpose: %result%
-Inverse.fmt= Inverse: %result%
+Inverse.fmt= , Inverse: %result%
 Jordan.fmt= Jordan Normal Form: %result%
 Map.fmt= , result of map %result%
 MinPolynomial.fmt= Minimal Polynomial: %result%
