--- a/filters/ptprince/ptdata/msi-latexin.tex
+++ b/filters/ptprince/ptdata/msi-latexin.tex
@@ -87,7 +87,25 @@
    \advance\msi@output by -1\relax
 }
 \def\@@usepackage{\@fileswithoptions\@pkgextension}
-\def\RequirePackage{\@fileswithoptions\@pkgextension}
+
+
+\def\RequirePackage{%
+  \@ifnextchar[{\@reqpackagea}{\@reqpackageb}}
+
+\def\@reqpackagea[#1]#2{%
+   \out@reqpackageA[#1]{#2}%
+   \advance\msi@output by 1\relax
+   \@@reqpackage[#1]{#2}%
+   \advance\msi@output by -1\relax
+}
+
+\def\@reqpackageb#1{%
+   \out@reqpackageB{#1}%
+   \advance\msi@output by 1\relax
+   \@@reqpackage{#1}%
+   \advance\msi@output by -1\relax
+}
+\def\@@reqpackage{\@fileswithoptions\@pkgextension}
 
 
 
