Plot import. Intermediate checkin. Does not work yet.

--- a/filters/ptprince/ptdata/msi-latexin.tex
+++ b/filters/ptprince/ptdata/msi-latexin.tex
@@ -16,7 +16,7 @@
 
 %\def~{\nobreakspace{}}
 
-\def\@makeother#1{\catcode`#112\relax}
+\def\@makeother#1{\catcode #1=12\relax}
 
 \catcode`\%=12
 \def\@percentchar{%}
