--- a/filters/ptprince/ptdata/msi-tcilatex.tex
+++ b/filters/ptprince/ptdata/msi-tcilatex.tex
@@ -360,13 +360,16 @@
              \catcode`\&=13
              \catcode`\~=11\relax\@FRAME}
 
+\def\stripspecial#1{}
+
 \def\@FRAME#1#2#3#4#5#6#7#8{%
    \def\reserved@@a{#7}
    \def\reserved@@b{Plot}
    \ifx\reserved@@a\reserved@@b
       \begingroup
         %% #8 will be a special with a vcam file
-        \let\special\@vcamspecial
+        %\let\special\@vcamspecial
+        \let\special\msispecial
         \ifmmode
           \string\msipassthru\char`\{
           #8
@@ -390,19 +393,33 @@
    \endgroup
 }%
 
+\newtoks\splittoks
+\def\split@one#1{%
+   \expandafter\splittoks\expandafter{\the\splittoks #1}%
+   \ifx#1;
+     [[\the\splittoks]]
+     \let\next\relax
+   \else     
+     \let\next\split@one
+   \fi
+   \next
+}
+
+
 \def\@vcamspecial#1{%
    \msihmode
    \msitag{<graph>}%
       \msitag{<graphSpec ImageFile=}"\expandafter{\expandafter\msigraphicname\msi@getVCamFile#1VCamFile'';XXXXX}"\msitag{>}%
       \msitag{<plot xmlns="http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul" PlotStatus="Inited" PlotType="rectangular">}%
-      \msitag{<Expression>
-         <math xmlns="http://www.w3.org/1998/Math/MathML">
-            <mrow><mi>x</mi><mo form="infix">−</mo><mn>1</mn></mrow>
-         </math>
-       </Expression>
-       <XVar>
-         <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>x</mi></math>
-       </XVar>}%
+      \msitag{<Expression>}
+         \split@one#1;
+         %<math xmlns="http://www.w3.org/1998/Math/MathML"> 
+         %   <mrow><mi>x</mi><mo form="infix">−</mo><mn>1</mn></mrow>
+         %</math>
+       \msitag{</Expression>}
+       \msitag{<XVar>
+                 <math xmlns="http://www.w3.org/1998/Math/MathML"><mi>x</mi></math>
+               </XVar>}%
       \msitag{</plot>}%
       \msitag{</graphSpec>}%
       \msitag{<plotwrapper msi_resize="true">} %
