--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -332,7 +332,7 @@
    \msiclosetag{preamble}{</preamble>}%
    \msi@inpreamble = 0
    \msi@br\msitag{</head>}
-   \msi@br\msiopentag{body}{<body>}
+   \msi@br\msiopentag{body}{<body showexpanders="true" showshort="true">}
    %%\msihmode\msi@br\msiopentag{docbody}{<docbody>}%
    
    \@paragraphs
