Fix 3057. Plot still doesn't import correctly, but no longer crashes.

--- a/filters/ptprince/ptdata/msi-tcilatex.tex
+++ b/filters/ptprince/ptdata/msi-tcilatex.tex
@@ -380,6 +380,7 @@
       \endgroup
    \else
       \begingroup
+        \let\special\msispecial
         %% #8 will be a special with a graphic file
         \ifmmode
           \string\msipassthru\char`\{
