--- a/filters/ptprince/ptdata/msi-varioref.sty
+++ b/filters/ptprince/ptdata/msi-varioref.sty
@@ -10,14 +10,14 @@
   \ifmmode
     \msitag{\msipassthru{<xref key="#1" href="#1" reftype="obj" req="varioref"/>}}%
   \else
-    \msitag{<xref key="#1" href="#1" reftype="obj" req="varioref"/>}
+    \msihmode\msitag{<xref key="#1" href="#1" reftype="obj" req="varioref"/>}
   \fi}
 
 \def\vpageref#1{%
   \ifmmode
     \msitag{\msipassthru{<xref key="#1" href="#1" reftype="page" req="varioref"/>}}%
   \else
-    \msitag{<xref key="#1" href="#1" reftype="page" req="varioref"/>}
+    \msihmode\msitag{<xref key="#1" href="#1" reftype="page" req="varioref"/>}
   \fi}
 
 \endinput
