Some progress on 1538

--- a/filters/ptprince/ptdata/msi-graphicx.sty
+++ b/filters/ptprince/ptdata/msi-graphicx.sty
@@ -6,7 +6,7 @@
   \msi@includegraphicsB{#2}}
 
 \def\msi@includegraphicsB#1{%
-   \msitag{<object data="}%
+   \msitag{<object src="}%
        \msigraphicname{#1}%
    \msitag{"/>}}
 
