--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -105,6 +105,7 @@
 \MSITextElement[emphasized]{emph}
 \MSITextElement{underline}
 \MSITextElement[upright]{textup}
+\MSITextElement[medium]{textmd}
 
 \MSITextElement{intertext}
 
