--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -355,14 +355,14 @@
 
 %% \usepackage
 \def\out@usepackageA[#1]#2{%
-   \msi@br\msitag{<usepackage req="#2" options="#1"/>}}
+   \msi@br\msitag{<usepackage req="#2" opt="#1"/>}}
 
 \def\out@usepackageB#1{%
    \msi@br\msitag{<usepackage req="#1"/>}}
 
 %% \RequirePackage
 \def\out@reqpackageA[#1]#2{%
-   \msi@br\msitag{<usepackage requirepackage="true" req="#2" options="#1"/>}}
+   \msi@br\msitag{<usepackage requirepackage="true" req="#2" opt="#1"/>}}
 
 \def\out@reqpackageB#1{%
    \msi@br\msitag{<usepackage requirepackage="true"  req="#1"/>}}
@@ -2077,7 +2077,7 @@
 
 
 \def\msi@begin@figure{%
-  \@ifnextchar[{\msi@begin@figureA}{msi@begin@figureB}}
+  \@ifnextchar[{\msi@begin@figureA}{\msi@begin@figureB}}
 
 
 \def\msi@begin@figureA[#1]{%
