Fix 2177 but see note in bug report.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -317,6 +317,7 @@
 \MSIUnicode{e-dot}{117}
 \MSIUnicode{G-ced}{122}
 \MSIUnicode{g-ced}{123}
+\MSIUnicode{dotlessj-hat}{135}
 \MSIUnicode{T-ced}{162}
 \MSIUnicode{t-ced}{163}
 \MSIUnicode{N-ced}{145}
