Various. Working on 2484 -- get samplearticle to import and compile.

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -2081,11 +2081,11 @@
 
 
 \def\msi@begin@figureA[#1]{%
-   \msiopentag{msiframe}{<msiframe opt="#1">}%
+   \msiopentag{msiframe}{<msiframe kind="figure" opt="#1" >}%
 }
 
 \def\msi@begin@figureB{%
-   \msiopentag{msiframe}{<msiframe>}%
+   \msiopentag{msiframe}{<msiframe kind="figure">}%
 }
 
 \def\msi@end@figure{%
